k8s/environments/review/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pal-tracker
spec:
  rules:
    - host: review.bchoudhury.k8s.pal.pivotal.io
      http:
        paths:
          - path: /
            backend:
              serviceName: pal-tracker
              servicePort: 8080
